executable ('test_rect', ['../src/rect.cpp','rect_test.cpp'])
executable ('test_window', ['../src/rect.cpp','../src/mainwindow.cpp','window_test.cpp'],dependencies: [sdl_dep, sdli_dep])
executable ('test_picture', ['../src/rect.cpp','../src/mainwindow.cpp','../src/picture.cpp','picture_test.cpp'],dependencies: [sdl_dep, sdli_dep])
executable ('test_button', ['../src/rect.cpp','../src/mainwindow.cpp','../src/button.cpp','button_test.cpp'],dependencies: [sdl_dep, sdli_dep])

